# MoodengSQL

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  moodeng.toml.example  status.md
.github/workflows/: ci.yml
moodeng-cli/: Cargo.toml
moodeng-cli/src/: main.rs
moodeng-core/: Cargo.toml
moodeng-core/examples/: benchmark.rs
moodeng-core/src/: backup.rs  catalog.rs  engine.rs  error.rs  executor.rs  index.rs  lib.rs  lock.rs  meta.rs  page_table.rs  parser.rs  planner.rs  query_util.rs  recovery.rs  storage.rs  transaction.rs  types.rs  wal.rs
moodeng-core/tests/: integration_test.rs  wal_replay_proptest.rs
moodeng-server/: Cargo.toml
moodeng-server/src/: auth.rs  config.rs  main.rs  metrics.rs  protocol.rs  scram.rs  session.rs  tls.rs
