[workspace]
members = ["moodeng-core", "moodeng-server", "moodeng-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AidenHeavensXD <aiden@moodengsql.dev>"]
license = "MIT"
description = "MoodengSQL — a blazing-fast PostgreSQL-like database engine"
repository = "https://github.com/AidenHeavensXD/moodengsql"
homepage = "https://moodengsql.dev"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
sqlparser = "0.53"
tokio = { version = "1", features = ["full"] }
bytes = "1"
memmap2 = "0.9"
parking_lot = "0.12"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
byteorder = "1"
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
tar = "0.4"
flate2 = "1"
