[package]
name = "moodeng-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core engine for MoodengSQL — storage, planner, executor"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
sqlparser.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
memmap2.workspace = true
byteorder.workspace = true
uuid.workspace = true
tracing.workspace = true
