[package]
name = "moodeng-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MoodengSQL server — PostgreSQL-compatible wire protocol"

[[bin]]
name = "moodengsql"
path = "src/main.rs"

[dependencies]
moodeng-core = { path = "../moodeng-core" }
anyhow.workspace = true
tokio.workspace = true
bytes.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
parking_lot.workspace = true
toml.workspace = true
serde.workspace = true
argon2.workspace = true
rand.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
sha2.workspace = true
hmac.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true }
rcgen = "0.13"
rustls-pemfile.workspace = true
